<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Drawer Menu Items -->
    <string name="library">Library</string>
    <string name="search_book">Search Book</string>
    <string name="about">About</string>

    <!-- AddBook fragment-->
    <string name="input_hint">Enter ISBN-10 or -13</string>
    <string name="search_button">Search</string>

    <string name="add_button">Add</string>
    <string name="clear_button">Clear</string>

    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_start_screen_key">pref_start_key</string>
    <string name="pref_start_screen_title">Start Screen</string>
    <string name="pref_start_screen_entries_library">Library</string>
    <string name="pref_start_screen_entries_search">Search</string>

    <string name="pref_live_search_key">pref_live_search_key</string>
    <string name="pref_live_search_title">Live Search</string>
    <string name="pref_live_search_summary_enabled">Enabled</string>
    <string name="pref_live_search_summary_disabled">Disabled</string>



    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="book_cover">Cover</string>


    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>


    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
</resources>
