<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:tag="PREFERENCE_TAG"
    >

    <ListPreference
        android:key="pref_start_fragment"
        android:title="@string/pref_start_screen_title"
        android:summary="%s"
        android:entries="@array/pref_start_entries"
        android:entryValues="@array/pref_start_values"
        android:defaultValue="0"/>

    <CheckBoxPreference
        android:key="pref_live_search"
        android:title="@string/pref_live_search_title"
        android:summaryOn="@string/pref_live_search_summary_enabled"
        android:summaryOff="@string/pref_live_search_summary_disabled"
        android:defaultValue="false" />



</PreferenceScreen>