<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="it.jaschke.alexandria.BookSearchFragment">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:id="@+id/ean_container"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="@integer/ean_width"
                android:id="@+id/ean_edit_text"
                android:saveEnabled="true"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:hint="@string/input_hint"
                android:paddingRight="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_button"
                android:id="@+id/search_button"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/book_title"
            android:textSize="@dimen/head_line"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:paddingRight="20dp"
            android:layout_below="@+id/ean_container"
            android:layout_alignLeft="@+id/ean_container"
            android:layout_alignStart="@+id/ean_container"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/book_subtitle"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/book_title"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_alignLeft="@+id/ean_container"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/authors"
            android:gravity="end"
            android:textSize="@dimen/small_fontsize"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/book_subtitle"
            android:layout_alignRight="@+id/ean_container"
            android:layout_alignEnd="@+id/ean_container"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/book_cover"
            android:contentDescription="@string/book_cover"
            android:layout_alignTop="@+id/authors"
            android:layout_alignLeft="@+id/ean_container"
            android:layout_alignStart="@+id/ean_container"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categories"
            android:textSize="@dimen/small_fontsize"
            android:layout_below="@+id/book_cover"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@+id/ean_container"
            android:layout_alignStart="@+id/ean_container"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/clear_button"
                android:layout_weight="1"
                android:id="@+id/clear_button"
                android:visibility="invisible"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/add_button"
                android:visibility="invisible"
                android:layout_weight="1"
                android:id="@+id/add_button"
                android:layout_gravity="bottom"
                />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
